feat: create new endpoints: get candidate and update stage
