# backend/src/routes/positionRoutes.ts
@@ -1,0 +1,8 @@
+import { Router } from 'express';
+import { getPositionCandidatesController } from '../presentation/controllers/positionController';
+
+const router = Router();
+
+router.get('/:id/candidates', getPositionCandidatesController);
+
+export default router;
